started adding docker compose support

--- a/data/supervisord.conf
+++ b/data/supervisord.conf
@@ -1,14 +1,23 @@
 [supervisord]
 nodaemon=true
-; Don't suppress script output, but reduce supervisor verbosity
-loglevel=debug
+loglevel=info
 
 [program:Updater]
 ; Use shell directly to bypass permission issues
-command=sh -c "sh /data/entrypoint.sh | awk '/./ {print \"[     UPDATER     ]\", $0}'"
+command=sh -c "sh /data/entrypoint.sh | awk '/./ {print \"[ UPDATE CRON JOB ]\", $0}'"
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:api-dashboard]
 ; Same pattern as Updater
 command=sh -c "pwsh -f /data/www/Start-Server.ps1 | awk '/./ {print \"[ API / Dashboard ]\", $0}'"
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+redirect_stderr=true
