added CD + implemented docker compose auto update feature +  implemented logging output in web dashboard

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -1,6 +1,6 @@
 services:
   updateportainerstacks:
-    image: nopenix/update-portainerstacks:latest
+    image: nopenix/whale-mate:latest
     ports:
       - 8080:8080 # Exposes HTTP 
     restart: unless-stopped
