--- a/.github/workflows/Build and Push to Docker Hub.yml
+++ b/.github/workflows/Build and Push to Docker Hub.yml
@@ -2,7 +2,7 @@ name: Build and Push to Docker Hub
 on:
   push:
     branches:
-      - "master"
+      - "main"
   schedule:
     - cron: "0 0 * * 0" # Every Sunday at midnight
 
